fix: nested filters panel elements took up space on the site although they were invisible

--- a/src/app/components/filters/filters.component.scss
+++ b/src/app/components/filters/filters.component.scss
@@ -18,22 +18,20 @@
   padding-block: 0;
   max-height: 0;
 
-  transition: all 0.8s ease-out;
+  transition: all 0.6s ease-out;
 
-  app-search-filter,
-  p-calendar {
+  & * {
     transform: scaleY(0);
     transform-origin: top;
     opacity: 0;
-    transition: all 0.8s;
+    transition: all 0.4s ease-in;
   }
 
   &.show-filters {
     max-height: 12rem;
     padding-block: $padding;
 
-    app-search-filter,
-    p-calendar {
+    & * {
       transform: scaleY(1);
       opacity: 1;
     }
